tests/setup.ts
// Test setup file
import dotenv from 'dotenv';

// Load test environment variables
dotenv.config({ path: '.env.test' });

// Set default test timeout
jest.setTimeout(30000);

// Mock console methods during tests
global.console = {
  ...console,
  // Uncomment to ignore console during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
